Fix Avatar image alignment #791

--- a/Dnn.CommunityForums/themes/community-bootstrap/_src/scss/parts/_topic-view.scss
+++ b/Dnn.CommunityForums/themes/community-bootstrap/_src/scss/parts/_topic-view.scss
@@ -60,6 +60,12 @@
         @media screen and (min-width: $break-tablet) {
             max-width: 80%
         }
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 
     .dcf-quick-reply {
